unpackaged/main/default/objects/litify_time__lit_Time_Config_Field__c/litify_time__lit_Time_Config_Field__c.object-meta.xml
<CustomObject>
    <description>Used to configure Litify Time Tracking. PLEASE ONLY CONFIGURE THROUGH TIME TRACKING ADMIN SETTINGS.</description>
    <label>Time Config Field</label>
    <nameField>
        <label>Time Config Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Config Fields</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>