unpackaged/main/default/objects/litify_time__lit_Time_Config_Field__c/fields/litify_time__lit_Enabled__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine if Time Entry form field is displayed in UI.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>