unpackaged/main/default/objects/litify_time__lit_Time_Config_Field__c/fields/litify_time__lit_Required__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine if Time Entry form field is required.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>