unpackaged/main/default/objects/litify_time__lit_Time_Config_Field__c/fields/litify_time__lit_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Display Table Field</fullName>
            </value>
            <value>
                <fullName>Time Entry Form Field</fullName>
            </value>
            <value>
                <fullName>Costs Form Field</fullName>
                <label>Cost Form Field</label>
            </value>
            <value>
                <fullName>Display Total</fullName>
            </value>
            <value>
                <fullName>Required Time Entry Field</fullName>
                <isActive>false</isActive>
                <label>Required Time Entry Field</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>